# apps-meeting-day-recorder

./: .gitignore  AGENTS.md  BACKLOG.md  PROJECT_STATE.md  README.md  config.yaml.example  pyproject.toml  start_meeting_day_recorder.cmd
app/: __init__.py  branding.py  config.py  main.py  runtime.py
app/assets/: README.md
app/models/: __init__.py
app/services/: ai_errors.py  archive.py  audio.py  first_run.py  readiness.py  recorder.py  storage.py  subprocess_utils.py  summarization.py  transcription.py
app/ui/: first_run_wizard.py  main_window.py  summary_viewer.py
docs/mockups/: first-run-wizard-bk-scribe.html
docs/superpowers/plans/: 2026-06-14-archive.md  2026-06-14-recover-past-workdays.md  2026-06-14-rendered-summary-single-file.md  2026-06-14-windows-packaging-and-first-run.md  2026-06-15-first-run-wizard-pr2.md
docs/superpowers/specs/: 2026-06-14-archive-design.md  2026-06-14-recover-past-workdays-design.md  2026-06-14-rendered-summary-single-file-design.md  2026-06-14-reprocess-warning-design.md  2026-06-14-windows-packaging-and-first-run-design.md
packaging/ffmpeg/: README.md
packaging/inno/: bk_scribe.iss
packaging/pyinstaller/: bk_scribe.spec
scripts/: build_windows_package.ps1
tests/: test_app_main.py  test_archive.py  test_audio.py  test_branding.py  test_config.py  test_encoding.py  test_first_run.py  test_first_run_ui.py  test_launcher.py  test_packaging.py  test_readiness.py  test_recorder.py  test_runtime.py  test_storage.py  test_subprocess_utils.py  test_summarization.py  test_transcription.py  test_ui.py
