[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apps-meeting-day-recorder"
version = "0.1.0"
description = "Local-first Windows desktop skeleton for recording ad hoc workday meetings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7,<7",
    "PyYAML>=6.0,<7",
    "obsws-python>=1.8,<2",
    "openai>=1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["MeetingSummaries*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

